Does silent account checks